public/index.css
/* ... */
#username::placeholder, #password::placeholder, #existingUsername::placeholder, #existingPassword::placeholder {
    color: #D9FAFF;
    font-style: italic;
    font-weight: lighter;
    font-family: 'Poppins';
}



#hoursOfSleep::placeholder, #describeSleep::placeholder {
    font-family: 'Poppins';
    font-style: italic;
    font-size: 1.06em;
    color: #D9FAFF;
}

.update-hours, .update-feeling, .update-description {
    font-family: 'Poppins';
    font-style: italic;
    font-size: 1.06em;
    color: #D9FAFF;
}

.update-hours::placeholder, .update-feeling::placeholder,
.update-description::placeholder {
    font-family: 'Poppins';
    font-style: normal;
    font-size: 0.92em;
    color: #D9FAFF;
}

/* distance beneath inputs */

#hoursOfSleep {
    margin-top: 35px;
}

#refreshed {
    margin-top: 10px;
}

#littleMore {
    margin-bottom: 30px;
}

/* update inputs */
.update-hours, .update-feeling, .update-description {
    margin-bottom: 8px;
}

.logout-button {
    text-decoration: none;
    color: #D9FAFF;
}

header, .sleep-info, .sign-up {
    text-align: center;
}

label, .hours, .feeling, .description {
    font-family: 'Poppins';
    font-size: 1.06em;
    margin-top: -3px;
}

.hours, .feeling, .description, .update-hours, .update-feeling, .update-description,
#hoursOfSleep, #describeSleep {
    letter-spacing: 0.65px;
}

label {
    margin-left: 15px;
}

.all-sleep-entries {
    margin-top: 595px;
    padding-left: 40px;
    padding-right: 35px;
}

.logIn {
    width: 93%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 200px;
    padding-left: 12px;
    padding-right: 13px;
}

.log-in-header {
    margin-top: 30px;
    margin-bottom: 20px;
    letter-spacing: 1.2px;
}

.createAccount {
    width: 93%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 200px;
    padding-left: 12px;
    padding-right: 13px;
}

.create-acct-header {
    margin-top: 30px;
    margin-bottom: 20px;
    letter-spacing: 1.2px;
}

.date {
    margin-bottom: 25px;
    letter-spacing: 1.2px;
}

.update-date {
    letter-spacing: 1.2px;
}

.describeSleepHeader {
    margin-bottom: 25px;
    letter-spacing: 1.2px;
}

/* button icons */
.svg-inline--fa.fa-w-16, .svg-inline--fa.fa-w-14 {
    width: 1.5em;
}

.svg-inline--fa {
    height: 0.92em;
}

.radio-label, #sleep-feeling {
    letter-spacing: 1px;
}

.filler {
    font-weight: normal;
    color: #84A644;
    margin-right: 15px;
    letter-spacing: 1px;
}

/* media queries */
@media all and (min-width: 400px) {
    .health-img {
        margin-top: 25px;
    }

    .logIn {
        width: 350px;
        margin-left: auto;
        margin-right: auto;
        
    }

    .createAccount {
        width: 350px;
        margin-left: auto;
        margin-right: auto;
    }
    
   .sleep-info {
       font-size: 1.1em;
       padding-top: 35px;
       padding-left: 40px;
       padding-right: 40px;
       /* padding-top: 75px; */
   }
}

@media all and (min-width: 640px) {
    .log-container, .updated-log-js {
        width: 600px;
        margin-left: auto;
        margin-right: auto;
    }

    .previous-entries-header {
        width: 600px;
        margin-left: auto;
        margin-right: auto;
    }

    .new-log-entry {
        width: 600px;
        margin-left: auto;
        margin-right: auto;
    }

    .describeSleepHeader {
        width: 600px;
        margin-left: auto;
        margin-right: auto;
    }
}

  @media all and (min-width: 1080px) {
    body {
        margin: 0px;
    }

      .sleep-info {
          display: inline-block;
          width: 256px;
          margin-left: 40px;
          margin-right: 40px;
          font-size: 1.1em;
          padding-left: 0px;
          padding-right: 0px;
      }

      .entry-nav {
          margin-top: -63px;
          margin-left: 15px;
          margin-right: 15px;
      }

      .homepage-sleep-info {
          text-align: center;
          margin-top: 80px;
          position: relative;
          /* bottom: -94px; */
      }

      .heart {
        position: relative;
        bottom: 60px;
      }

      .heart-text {
          position: relative;
          bottom: 56px;
      }

      .clock {
          position: relative;
          top: -101px;
      }

      .clock-text {
          position: relative;
          top: -92px;
      }

      .journal {
          position: relative;
          bottom: 102px;
      }

      .journal-text {
          position: relative;
          bottom: 92px;
      }
  }

  @media all and (min-width: 1500px) {
      .sleep-info {
        width: 400px;
      }

      .heart {
        position: relative;
        bottom: 60px;
      }

      .heart-text {
        position: relative;
        top: -55px;
      }

      .entry-nav {
          padding-left: 10px;
          padding-right: 10px;
      }
  }

